force-app/main/default/objects/Krow__Candidate__c/fields/Krow__Current_Company__c.field-meta.xml
<CustomField>
    <fullName>Krow__Current_Company__c</fullName>
    <label>Current Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>