force-app/main/default/objects/Krow__Candidate__c/fields/Krow__Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Krow__Full_Name__c</fullName>
    <formula>Krow__First_Name__c &amp; &quot; &quot; &amp; Krow__Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Name</label>
    <type>Text</type>
</CustomField>