force-app/main/default/objects/Krow__Candidate__c/fields/Krow__Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Krow__Last_Name__c</fullName>
    <label>Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>