force-app/main/default/objects/Krow__Candidate__c/fields/Krow__LinkedIn_Profile__c.field-meta.xml
<CustomField>
    <fullName>Krow__LinkedIn_Profile__c</fullName>
    <label>LinkedIn Profile</label>
    <type>Url</type>
</CustomField>