force-app/main/default/objects/Krow__Candidate__c/fields/Krow__Phone__c.field-meta.xml
<CustomField>
    <fullName>Krow__Phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>