force-app/main/default/objects/Krow__Candidate__c/fields/Krow__Twitter_Profile__c.field-meta.xml
<CustomField>
    <fullName>Krow__Twitter_Profile__c</fullName>
    <label>Twitter Profile</label>
    <type>Url</type>
</CustomField>