force-app/main/default/objects/Krow__Candidate__c/listViews/Krow__All.listView-meta.xml
<ListView>
    <fullName>Krow__All</fullName>
    <columns>NAME</columns>
    <columns>Krow__Email__c</columns>
    <columns>Krow__Phone__c</columns>
    <columns>Krow__Current_Company__c</columns>
    <columns>Krow__Project_Resource__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>